Attempting secondary fix to make game log readable

--- a/GHLWebsiteDjango/GHLWebsiteApp/static/GHLWebsiteApp/mainstyle.css
+++ b/GHLWebsiteDjango/GHLWebsiteApp/static/GHLWebsiteApp/mainstyle.css
@@ -141,6 +141,7 @@ body {
   display: flex;
   flex-wrap: nowrap;
   margin-bottom: 15px;
+  gap: 5px;
 }
 
 .subsection-container-vert {
